# kotha-cli

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  README_STANDALONE.md  build.py  build_complete.bat  build_exe.bat  build_exe.py  create_dist.py  install.bat  install.py  install_standalone.bat  pyproject.toml
kotha/: main.py
